[gd_scene load_steps=38 format=4 uid="uid://bj43llyyw8awa"]

[ext_resource type="PackedScene" uid="uid://brlfbefvgd0kl" path="res://Scenes/Other/hub_background.tscn" id="1_8cg2e"]
[ext_resource type="Texture2D" uid="uid://bpwxtarcss3t3" path="res://Graphics/UI/StartLabel.png" id="1_574um"]
[ext_resource type="Script" uid="uid://dro3ea0s02cwb" path="res://Scripts/Other/main_menu.gd" id="1_cbjgc"]
[ext_resource type="Texture2D" uid="uid://b7uvk7wmqfcec" path="res://Graphics/UI/DiggyWorldTitle.png" id="2_a7jit"]
[ext_resource type="Texture2D" uid="uid://ddvrkghpxbh75" path="res://Graphics/UI/ControlsLabel.png" id="2_tksml"]
[ext_resource type="TileSet" uid="uid://br0dejie4dhpi" path="res://TileSets/Background.tres" id="3_rtsvi"]
[ext_resource type="Texture2D" uid="uid://bhid4a3tm0fvy" path="res://Graphics/UI/RebindLabel.png" id="6_mn2ao"]
[ext_resource type="Texture2D" uid="uid://c0vsjlsj20qf1" path="res://Graphics/UI/QuitLabel.png" id="7_mswog"]
[ext_resource type="Texture2D" uid="uid://bb350vcsoux7q" path="res://Graphics/Player/DiggySpriteSheet.png" id="7_q3hmp"]
[ext_resource type="Texture2D" uid="uid://c2gg323xbxa3q" path="res://Graphics/UI/MadeInGodotLabel.png" id="8_pr3j6"]

[sub_resource type="Animation" id="Animation_unsdq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0872665]
}

[sub_resource type="Animation" id="Animation_wompg"]
resource_name = "TitleAnim"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0349066, -0.0349066, 0.0349066]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2by6u"]
_data = {
&"RESET": SubResource("Animation_unsdq"),
&"TitleAnim": SubResource("Animation_wompg")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_7paq3"]
atlas = ExtResource("1_574um")
region = Rect2(1, 1, 44, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq5uo"]
atlas = ExtResource("1_574um")
region = Rect2(1, 10, 44, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_u0sh4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7paq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq5uo")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_amrwi"]
atlas = ExtResource("2_tksml")
region = Rect2(1, 1, 71, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlmx1"]
atlas = ExtResource("2_tksml")
region = Rect2(1, 10, 71, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_gjnng"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amrwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlmx1")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bl272"]
atlas = ExtResource("7_mswog")
region = Rect2(1, 1, 35, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv8gb"]
atlas = ExtResource("7_mswog")
region = Rect2(1, 10, 35, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_8gglf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl272")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv8gb")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_two7f"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 1, 107, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_pk40r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_two7f")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_figs3"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 10, 17, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1tlq"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 19, 35, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_00nwu"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 28, 35, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_sebcg"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 37, 44, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxvyb"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 46, 35, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcmo6"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 55, 26, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rprs"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 64, 62, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_oujqh"]
atlas = ExtResource("6_mn2ao")
region = Rect2(1, 73, 62, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_0dkb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_figs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1tlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00nwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sebcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxvyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcmo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rprs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oujqh")
}],
"loop": true,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_wf0q7"]
atlas = ExtResource("7_q3hmp")
region = Rect2(1, 76, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0w8x"]
atlas = ExtResource("7_q3hmp")
region = Rect2(18, 76, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pltiq"]
atlas = ExtResource("7_q3hmp")
region = Rect2(35, 76, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_7xbxe"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": SubResource("AtlasTexture_wf0q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0w8x")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_pltiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0w8x")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_cbjgc")

[node name="MainLabel" type="Sprite2D" parent="."]
position = Vector2(192, 54)
rotation = 0.0872665
texture = ExtResource("2_a7jit")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainLabel"]
libraries = {
&"": SubResource("AnimationLibrary_2by6u")
}
autoplay = "TitleAnim"

[node name="HubBackground" parent="." instance=ExtResource("1_8cg2e")]

[node name="ParallaxLayer5" type="ParallaxLayer" parent="HubBackground"]
modulate = Color(0.966285, 0.594447, 0.367547, 1)
motion_scale = Vector2(1, 0)
motion_offset = Vector2(0, 178)
motion_mirroring = Vector2(384, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="HubBackground/ParallaxLayer5"]
tile_map_data = PackedByteArray("AAAAAAAAAAALAAQAAAABAAAAAAALAAQAAAACAAAAAAALAAQAAAADAAAAAAALAAQAAAAEAAAAAAALAAQAAAAFAAAAAAALAAQAAAAGAAAAAAALAAQAAAAHAAAAAAALAAQAAAAIAAAAAAALAAQAAAAJAAAAAAALAAQAAAAKAAAAAAALAAQAAAALAAAAAAALAAQAAAAMAAAAAAALAAQAAAANAAAAAAALAAQAAAAOAAAAAAALAAQAAAAPAAAAAAALAAQAAAAQAAAAAAALAAQAAAARAAAAAAALAAQAAAASAAAAAAALAAQAAAATAAAAAAALAAQAAAAUAAAAAAALAAQAAAAVAAAAAAALAAQAAAAWAAAAAAALAAQAAAAXAAAAAAALAAQAAAAXAAEAAAALAAUAAAAWAAEAAAALAAUAAAAVAAEAAAALAAUAAAAUAAEAAAALAAUAAAATAAEAAAALAAUAAAASAAEAAAALAAUAAAARAAEAAAALAAUAAAAQAAEAAAALAAUAAAAPAAEAAAALAAUAAAAOAAEAAAALAAUAAAANAAEAAAALAAUAAAAMAAEAAAALAAUAAAALAAEAAAALAAUAAAAKAAEAAAALAAUAAAAJAAEAAAALAAUAAAAIAAEAAAALAAUAAAAHAAEAAAALAAUAAAAGAAEAAAALAAUAAAAFAAEAAAALAAUAAAAEAAEAAAALAAUAAAADAAEAAAALAAUAAAACAAEAAAALAAUAAAABAAEAAAALAAUAAAAAAAEAAAALAAUAAAAAAAIAAAALAAUAAAABAAIAAAALAAUAAAACAAIAAAALAAUAAAADAAIAAAALAAUAAAAEAAIAAAALAAUAAAAFAAIAAAALAAUAAAAGAAIAAAALAAUAAAAHAAIAAAALAAUAAAAIAAIAAAALAAUAAAAJAAIAAAALAAUAAAAKAAIAAAALAAUAAAALAAIAAAALAAUAAAAMAAIAAAALAAUAAAANAAIAAAALAAUAAAAOAAIAAAALAAUAAAAPAAIAAAALAAUAAAAQAAIAAAALAAUAAAARAAIAAAALAAUAAAASAAIAAAALAAUAAAATAAIAAAALAAUAAAAUAAIAAAALAAUAAAAVAAIAAAALAAUAAAAWAAIAAAALAAUAAAAXAAIAAAALAAUAAAA=")
tile_set = ExtResource("3_rtsvi")

[node name="StartButton" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 102)
sprite_frames = SubResource("SpriteFrames_u0sh4")
autoplay = "default"

[node name="ControlsButton" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 114)
sprite_frames = SubResource("SpriteFrames_gjnng")
autoplay = "default"
frame_progress = 0.285253

[node name="QuitButton" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 126)
sprite_frames = SubResource("SpriteFrames_8gglf")
autoplay = "default"

[node name="RebindLabel" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(192, 142)
sprite_frames = SubResource("SpriteFrames_pk40r")
autoplay = "default"

[node name="KeyRebinding" type="AnimatedSprite2D" parent="RebindLabel"]
position = Vector2(0, 10)
sprite_frames = SubResource("SpriteFrames_0dkb1")
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(192, 108)
zoom = Vector2(3, 3)

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0.932164, 0.583768, 0.316836, 1)
position = Vector2(134, 166)
sprite_frames = SubResource("SpriteFrames_7xbxe")
autoplay = "default"
frame = 1
frame_progress = 0.0599548
flip_h = true

[node name="BottomLabel" type="Sprite2D" parent="."]
position = Vector2(192, 209)
texture = ExtResource("8_pr3j6")
